--- a/requirements.txt
+++ b/requirements.txt
@@ -126,7 +126,7 @@ threadpoolctl==3.6.0
 tinycss2==1.4.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.6.0+cpu
+torch
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
