--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,6 @@ nest-asyncio==1.6.0
 networkx==3.3
 notebook_shim==0.2.4
 numpy==2.2.4
-nvidia-nccl-cu12==2.26.5
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -119,7 +118,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 streamlit==1.45.0
-sympy==1.13.1
+sympy
 tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
